--- a/bencher/Cargo.toml
+++ b/bencher/Cargo.toml
@@ -24,7 +24,7 @@ serde = { version = "1.0.163", optional = true, features = ['derive'] }
 serde_json = {version = "1.0.96", optional = true }
 hash-db = { version = "0.16.0", default-features = false, optional = true }
 wasm-bencher-procedural = { path = "bencher-procedural", version = "*", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.5.0", features = ["derive"], default-features = false }
+codec = { package = "parity-scale-codec", version = "^3.0.0", features = ["derive"], default-features = false }
 
 sp-core = {version = "20.0.0", default-features = false }
 sp-std = { version = "7.0.0", default-features = false }
