--- a/bencher/Cargo.toml
+++ b/bencher/Cargo.toml
@@ -20,9 +20,9 @@ rand = {version = "0.8.5", optional = true }
 linregress = { version = "0.5.1", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
 thiserror = { version = "1.0", optional = true }
-serde = { version = "1.0.163", optional = true, features = ['derive'] }
-serde_json = {version = "1.0.96", optional = true }
-hash-db = { version = "0.16.0", default-features = false, optional = true }
+serde = { version = "^1.0", optional = true, features = ['derive'] }
+serde_json = {version = "^1.0", optional = true }
+hash-db = { version = "^0.16.0", default-features = false, optional = true }
 wasm-bencher-procedural = { path = "bencher-procedural", version = "*", default-features = false }
 codec = { package = "parity-scale-codec", version = "^3.0.0", features = ["derive"], default-features = false }
 
