--- a/bencher/test/Cargo.toml
+++ b/bencher/test/Cargo.toml
@@ -13,8 +13,8 @@ harness = false
 required-features = ["wasm-bench"]
 
 [dependencies]
-serde = { version = "1.0.163", optional = true }
-scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
+serde = { version = "^1.0", optional = true }
+scale-info = { version = "^2.7.0", default-features = false, features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "^3.0.0", features = ["derive"], default-features = false }
 frame-support = { version = "21.0.0", default-features = false }
 frame-system = { version = "21.0.0", default-features = false }
