--- a/weight-gen/Cargo.toml
+++ b/weight-gen/Cargo.toml
@@ -7,10 +7,10 @@ authors = ["Laminar Developers <hello@laminar.one>"]
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0.163", features = ["derive"] }
-serde_json = "1.0"
-clap = "4.2.7"
-handlebars = "4.3.7"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
+clap = "^4.2.7"
+handlebars = "^4.3.7"
 
 [features]
 default = ["std"]
