--- a/weight-meter/Cargo.toml
+++ b/weight-meter/Cargo.toml
@@ -12,8 +12,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 weight-meter-procedural = { path = "weight-meter-procedural", version = "*", default-features = false }
 
 [dev-dependencies]
-serde = "1.0.163"
-scale-info = { version = "2.7.0", features = ["derive"] }
+serde = "^1.0"
+scale-info = { version = "^2.7.0", features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "^3.0.0" }
 sp-runtime = "23.0.0"
 sp-io = "22.0.0"
