--- a/bencher/Cargo.toml
+++ b/bencher/Cargo.toml
@@ -8,11 +8,11 @@ authors = ["Laminar Developers <hello@laminar.one>"]
 edition = "2021"
 
 [dependencies]
-paste = "1.0.7"
-build-helper = { version = "0.1.1", optional = true }
-cargo_metadata = { version = "0.15.4", optional = true }
+paste = "^1.0"
+build-helper = { version = "^0.1", optional = true }
+cargo_metadata = { version = "^0.15", optional = true }
 tempfile = { version = "3.5.0", optional = true }
-toml = { version = "0.7.4", optional = true }
+toml = { version = "^0.7", optional = true }
 walkdir = { version = "2.3.3", optional = true }
 ansi_term = { version = "0.12.1", optional = true }
 wasm-gc-api = { version = "0.1.11", optional = true }
