--- a/weight-meter/weight-meter-procedural/Cargo.toml
+++ b/weight-meter/weight-meter-procedural/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0.58"
-quote = "1.0.27"
-syn = { version = "2.0.16", features = ["full"] }
+proc-macro2 = "^1.0"
+quote = "^1.0"
+syn = { version = "^2.0", features = ["full"] }
 
 [features]
 default = ["std"]
