--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,3 +1,8 @@
+edition = "2021"
 reorder_imports = true
 hard_tabs = true
-max_width = 120
+max_width = 100
+newline_style = "Unix"
+chain_width = 80
+match_block_trailing_comma = true
+use_field_init_shorthand = true
