--- a/bencher/Cargo.toml
+++ b/bencher/Cargo.toml
@@ -11,20 +11,20 @@ edition = "2021"
 paste = "^1.0"
 build-helper = { version = "^0.1", optional = true }
 cargo_metadata = { version = "^0.15", optional = true }
-tempfile = { version = "3.5.0", optional = true }
+tempfile = { version = "^3.5", optional = true }
 toml = { version = "^0.7", optional = true }
-walkdir = { version = "2.3.3", optional = true }
-ansi_term = { version = "0.12.1", optional = true }
-wasm-gc-api = { version = "0.1.11", optional = true }
-rand = {version = "0.8.5", optional = true }
-linregress = { version = "0.5.1", optional = true }
-parking_lot = { version = "0.12.1", optional = true }
-thiserror = { version = "1.0", optional = true }
+walkdir = { version = "^2.3", optional = true }
+ansi_term = { version = "^0.12", optional = true }
+wasm-gc-api = { version = "^0.1", optional = true }
+rand = {version = "^0.8", optional = true }
+linregress = { version = "^0.5", optional = true }
+parking_lot = { version = "^0.12", optional = true }
+thiserror = { version = "^1.0", optional = true }
 serde = { version = "^1.0", optional = true, features = ['derive'] }
 serde_json = {version = "^1.0", optional = true }
-hash-db = { version = "^0.16.0", default-features = false, optional = true }
+hash-db = { version = "^0.16", default-features = false, optional = true }
 wasm-bencher-procedural = { path = "bencher-procedural", version = "*", default-features = false }
-codec = { package = "parity-scale-codec", version = "^3.0.0", features = ["derive"], default-features = false }
+codec = { package = "parity-scale-codec", version = "^3.5", features = ["derive"], default-features = false }
 
 sp-core = {version = "20.0.0", default-features = false }
 sp-std = { version = "7.0.0", default-features = false }
