--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,11 +8,11 @@ jobs:
       HOST: machine
     steps:
       - uses: actions/checkout@v3
-      - name: Install minimal stable with clippy and rustfmt
+      - name: Install minimal nightly with clippy and rustfmt
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
           components: rustfmt, clippy
       - name: Run Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
