--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,20 @@ resolver = "2"
 
 [profile.dev]
 split-debuginfo = "unpacked"
+
+[workspace.dependencies]
+sp-core = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sp-std = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sp-io = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sp-runtime-interface = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sp-runtime = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sp-state-machine = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sc-executor = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sc-executor-common = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sc-client-db = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sp-maybe-compressed-blob = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+frame-support = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+frame-system = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sp-externalities = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+sp-storage = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
+pallet-balances = { git="https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
