--- a/bencher/Cargo.toml
+++ b/bencher/Cargo.toml
@@ -10,7 +10,11 @@ edition = "2021"
 [dependencies]
 paste = "^1.0"
 build-helper = { version = "^0.1", optional = true }
-cargo_metadata = { version = "^0.15", optional = true }
+cargo_metadata = { version = "^0.17", optional = true }
+strum = { version = "^0.25", features = ["derive"], optional = true }
+filetime = { version = "^0.2", optional = true }
+wasm-opt = { version = "^0.112", optional = true }
+parity-wasm = { version = "0.45", optional = true }
 tempfile = { version = "^3.5", optional = true }
 toml = { version = "^0.7", optional = true }
 walkdir = { version = "^2.3", optional = true }
@@ -22,22 +26,21 @@ parking_lot = { version = "^0.12", optional = true }
 thiserror = { version = "^1.0", optional = true }
 serde = { version = "^1.0", optional = true, features = ['derive'] }
 serde_json = {version = "^1.0", optional = true }
-hash-db = { version = "^0.16", default-features = false, optional = true }
 wasm-bencher-procedural = { path = "bencher-procedural", version = "*", default-features = false }
 codec = { package = "parity-scale-codec", version = "^3.0", features = ["derive"], default-features = false }
 
-sp-core = {version = "20.0.0", default-features = false }
-sp-std = { version = "7.0.0", default-features = false }
-sp-io = { version = "22.0.0", default-features = false }
-sp-runtime-interface = { version = "16.0.0", default-features = false }
-sp-state-machine = { version = "0.27.0", default-features = false, optional = true }
-sc-executor = { version = "0.25.0", default-features = false, optional = true }
-sc-executor-common = { version = "0.22.0", default-features = false, optional = true }
-sc-client-db = { version = "0.28.0", default-features = false, features = ["rocksdb"], optional = true }
-sp-maybe-compressed-blob = { version = "5.0.0", default-features = false, optional = true }
-frame-support = { version = "21.0.0", default-features = false }
-sp-externalities = { version = "0.18.0", default-features = false }
-sp-storage = { version = "12.0.0", default-features = false, optional = true }
+sp-core = { workspace = true, default-features = false }
+sp-std = { workspace = true, default-features = false }
+sp-io = { workspace = true, default-features = false }
+sp-runtime-interface = { workspace = true, default-features = false }
+sp-state-machine = { workspace = true, default-features = false, optional = true }
+sc-executor = { workspace = true, default-features = false, optional = true }
+sc-executor-common = { workspace = true, default-features = false, optional = true }
+sc-client-db = { workspace = true, default-features = false, features = ["rocksdb"], optional = true }
+sp-maybe-compressed-blob = { workspace = true, default-features = false, optional = true }
+frame-support = { workspace = true, default-features = false }
+sp-externalities = { workspace = true, default-features = false }
+sp-storage = { workspace = true, default-features = false, optional = true }
 
 [features]
 default = ["std"]
@@ -45,6 +48,10 @@ std = [
     "wasm-bencher-procedural/std",
     "build-helper",
     "cargo_metadata",
+    "strum",
+    "filetime",
+    "wasm-opt",
+    "parity-wasm",
     "tempfile",
     "toml",
     "walkdir",
@@ -56,7 +63,6 @@ std = [
     "thiserror",
     "serde/std",
     "serde_json/std",
-    "hash-db/std",
     "codec/std",
     "sp-core/std",
     "sp-std/std",
