--- a/bencher/test/Cargo.toml
+++ b/bencher/test/Cargo.toml
@@ -16,16 +16,16 @@ required-features = ["wasm-bench"]
 serde = { version = "^1.0", optional = true }
 scale-info = { version = "^2.7.0", default-features = false, features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "^3.0.0", features = ["derive"], default-features = false }
-frame-support = { version = "21.0.0", default-features = false }
-frame-system = { version = "21.0.0", default-features = false }
-sp-runtime = { version = "23.0.0", default-features = false }
-sp-core = { version = "20.0.0", default-features = false }
-sp-std = { version = "7.0.0", default-features = false }
+frame-support = { workspace = true, default-features = false }
+frame-system = { workspace = true, default-features = false }
+sp-runtime = { workspace = true, default-features = false }
+sp-core = { workspace = true, default-features = false }
+sp-std = { workspace = true, default-features = false }
 wasm-bencher = { path = "..", version = "*", default-features = false }
 weight-meter = { path = "../../weight-meter", version = "*", default-features = false }
 
 [dev-dependencies]
-sp-io = "22.0.0"
+sp-io = { workspace = true }
 
 [features]
 default = ["std"]
