--- a/weight-meter/Cargo.toml
+++ b/weight-meter/Cargo.toml
@@ -15,20 +15,25 @@ weight-meter-procedural = { path = "weight-meter-procedural", version = "*", def
 serde = "^1.0"
 scale-info = { version = "^2.7.0", features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "^3.0.0" }
-sp-runtime = "23.0.0"
-sp-io = "22.0.0"
-sp-std = "7.0.0"
+sp-runtime = { workspace = true }
+sp-io = { workspace = true }
+sp-std = { workspace = true }
 
-frame-support = "21.0.0"
-frame-system = "21.0.0"
-pallet-balances = "21.0.0"
+frame-support = { workspace = true }
+frame-system = { workspace = true }
+pallet-balances = { workspace = true }
 
 wasm-bencher = { path = "../bencher", version = "*" }
 
 [features]
 default = ["std"]
 std = [
+	"sp-io/std",
+	"sp-std/std",
 	"weight-meter-procedural/std",
+	"frame-support/std",
+	"frame-system/std",
+	"pallet-balances/std",
 ]
 wasm-bench = [
 	"weight-meter-procedural/wasm-bench",
