--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,18 @@ resolver = "2"
 split-debuginfo = "unpacked"
 
 [workspace.dependencies]
-sp-core = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sp-std = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sp-io = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sp-runtime-interface = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sp-runtime = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sp-state-machine = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sc-executor = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sc-executor-common = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sc-client-db = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sp-maybe-compressed-blob = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-frame-support = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-frame-system = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sp-externalities = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-sp-storage = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
-pallet-balances = { git="https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0", default-features = false }
+frame-support = { version = "25.0.0", default-features = false }
+frame-system = { version = "25.0.0", default-features = false }
+pallet-balances = { version = "25.0.0", default-features = false }
+sc-client-db = { version = "0.32.0", default-features = false }
+sc-executor = { version = "0.29.0", default-features = false }
+sc-executor-common = { version = "0.26.0", default-features = false }
+sp-core = { version = "25.0.0", default-features = false }
+sp-externalities = { version = "0.23.0", default-features = false }
+sp-io = { version = "27.0.0", default-features = false }
+sp-maybe-compressed-blob = { version = "9.0.0", default-features = false }
+sp-runtime = { version = "28.0.0", default-features = false }
+sp-runtime-interface = { version = "21.0.0", default-features = false }
+sp-state-machine = { version = "0.32.0", default-features = false }
+sp-std = { version = "12.0.0", default-features = false }
+sp-storage = { version = "17.0.0", default-features = false }
