--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel="1.88.0"
+channel="1.84.1"
 components = [ "rustfmt", "clippy" ]
-targets = [ "wasm32v1-none" ]
+targets = [ "wasm32-unknown-unknown" ]
 profile = "minimal"
